--- a/_posts/2020-05-15-betting.markdown
+++ b/_posts/2020-05-15-betting.markdown
@@ -4,13 +4,13 @@ title:  How Betting Odds Work
 comment_issue_id: 11
 ---
 
-This is an intermediary post between my [previous post](https://joe-ferrara.github.io/2020/05/04/basketball.html) and next post, to explain how betting odds work. In my last post I used machine learning algorithms to predict the outcomes of NBA games, and compared how well machine learning algorithms did to Las Vegas betting odds predictions. In my next post I will use the machine learning model's predictions to simulate making bets on games and see how much money is won or lost.
+This is an intermediary post between my [previous post](https://joe-ferrara.github.io/2020/05/04/basketball.html) and next post, to explain how betting odds work. In my last post I used machine learning algorithms to predict the outcomes of NBA games and compared the predictions to Las Vegas betting odds' predictions. In my next post I will use the machine learning models' predictions to simulate making bets on games and see how much money is won or lost.
 
-I am by no means an expert on the subject of betting and betting odds. I have always been a huge sports fan, and a bit confused whenever money lines for games are discussed on talk shows and in columns. While working on my last and next post, I finally determined exactly how money lines work. This post is of money lines, the over-under, and the spread.
+I am by no means an expert on the subject of betting and betting odds. I am a huge sports fan, and have always been a bit confused whenever money lines for games are discussed on talk shows and in columns. While working on my last post, I finally determined exactly how money lines work.
 
 # Example
 
-For a given basketball game, say the Utah Jazz versus the Golden State Warriors the betting options might be as follows:
+For a given basketball game, say the Utah Jazz versus the Golden State Warriors the betting options might look as follows:
 
 | Game | Over-Under | Spread | Money Line |
 |------|------------|--------|------------|
@@ -19,36 +19,36 @@ For a given basketball game, say the Utah Jazz versus the Golden State Warriors 
 
 # Over-under and Spread
 
-For this game, the over-under is $212$ and Golden State is favored to win by $5$ points. The over-under is a prediction of the combined points scored by both teams in the game. You bet either that the combined scores of the two teams will be over the over under or under the over under. If you win your bet then you win the amount of money you bet<sup>[1](#1)</sup>. If the combined score is exactly the over-under, then you get your back money no matter who you bet on (you neither win nor lose the bet). For this game example, you would bet whether or not the sum Utah and Golden State's score is over or under $212$.
+For this game, the over-under is $212$ and Golden State is favored to win by $5$ points. The over-under is a prediction of the combined points scored by both teams in the game. You bet either that the combined scores of the two teams will be over the over under or under the over under. If you win your bet then you win the amount of money you bet<sup>[1](#1)</sup>. If the combined score is exactly the over-under, then you get your money back no matter who you bet on (you neither win nor lose the bet). For the example, you would bet whether or not the sum Utah and Golden State's score is over or under $212$.
 
 The spread is a prediction of which team will win and by how much. The team with the negative spread is favored to win by that many points, and the team with the positive spread is the underdog, expected to lose by that many points. In the Utah versus Golden State example, $5$ is the spread amount, Golden State is favored to win by $5$ points, and Utah is the underdog, expected to lose by $5$ points. With the spread, if you bet on the favored team, then you win your bet if the favored team wins by more than the spread amount. If you bet on the underdog, then you win the bet if the underdog wins or loses by less than the spread amount. If you win a bet on the spread, you win the amount of money you bet. Similarly to the over-under, if the favored team wins by exactly the spread amount, then you get your money back (no matter who you bet on). In the example, if you bet on Golden State, then you win the bet if Golden State wins by more than $5$. If you bet on Utah, then you win the bet if Utah wins or loses by less than $5$.
 
-The over under and spread correspond to a prediction for the score of the game. Let's say that Team A is favored to beat Team B and that the over under for the game is $m$ and the spread $s$. Let $x$ and $y$ be the amount of points Team A and Team B respectively are predicted to score. Then $x + y = m$, and $x - y = s$. Solving the equations for $x$ and $y$ gives
+The over under and spread correspond to a prediction for the score of the game. Let's say Team A is favored to beat Team B, the over under for the game is $m$, and the spread $s$. Let $x$ and $y$ be the amount of points Team A and Team B respectively are predicted to score. Then $x + y = m$, and $x - y = s$. Solving the equations for $x$ and $y$ gives
 
-$$x = \frac{m + s}{2}, y = \frac{m-s}{2},$$
+$$x = \frac{m + s}{2}, y = \frac{m-s}{2}.$$
 
-so we can translate the over under and spread for a game to a prediction for the score of that game. For the Golden State versus Utah example, the predicted score is Golden State $158.5$, Utah $153.5$.
+These two equations translate the over under and spread for a game to a prediction for the score of that game. For the Golden State versus Utah example, the predicted score is Golden State $158.5$, Utah $153.5$.
 
 # Money Lines and the Margin
 
-The money lines are a way to bet outright on which team you think will win. Like the spread, the team with the negative money line is favored to win, and the team with the positive money line is the underdog, expected to lose. Betting on the money lines works as follows: If the money line for the favored team is $-d$ with $d>0$, and you bet $b$ dollars on the favored team to win, then if the favored team wins you win $b\cdot \frac{100}{d}$ dollars<sup>[1](#1)</sup>. This is usually stated as, "you bet the money line amount to win $\\$100$." On the other hand, if the money line for the underdog is $d$ with $d>0$, and you bet $b$ dollars on the underdog to win, then if the underdog wins you win $b \cdot \frac{d}{100}$ dollars. This is usually stated as, "you bet $\\$100$ to win the money line amount." In the Golden State versus Utah example, you would bet $\\$120$ on Golden State to win in order to win $\\$100$, and you would bet $\\$100$ on Utah to win in order to win $\\$110$.
+The money lines are a way to bet outright on which team you think will win. Like the spread, the team with the negative money line is favored to win, and the team with the positive money line is the underdog, expected to lose. Betting on the money lines works as follows: If the money line for the favored team is $-d$ with $d>0$, and you bet $b$ dollars on the favored team to win, then if the favored team wins you win $b\cdot \frac{100}{d}$ dollars<sup>[1](#1)</sup>. This is usually stated as, "bet the money line amount to win $\\$100$." On the other hand, if the money line for the underdog is $d$ with $d>0$, and you bet $b$ dollars on the underdog to win, then if the underdog wins you win $b \cdot \frac{d}{100}$ dollars. This is usually stated as, "bet $\\$100$ to win the money line amount." In the Golden State versus Utah example, you would bet $\\$120$ on Golden State to win in order to win $\\$100$, and you would bet $\\$100$ on Utah to win in order to win $\\$110$.
 
-The money lines correspond to a prediction for the probability of each team winning the game. If Team A is favored to win with money line $-d$, $d>0$, then the corresponding prediction for the probability of Team A winning is $\frac{d}{d + 100}$. If Team B is the underdog with money line $d$, then the corresponding prediction of Team B winning is $\frac{100}{d + 100}$. One way to think about this is if the money lines for Team A and Team B are $-100$ and $+100$, then their probabilities of winning are $\frac{1}{2}$ and $\frac{1}{2}$; both teams are equally likely to win. Another simple example is if the money line for Team B is $+300$, then the probability of Team B winning is $\frac{1}{4}$. In the Golden State versus Utah example, the probability of Golden State winning is $\frac{120}{220} = \frac{6}{11} \approx .55$, and the probability of Utah winning is $\frac{100}{210} = \frac{10}{21} \approx .48$. The observant reader will notice that these probabilities do not add up to $1$: $\frac{6}{11} + \frac{10}{21} \approx 1.03$. The difference between the sum of the prediction probabilities and $1$ is called the margin of the money line odds.
+The money lines correspond to a prediction of the probability of each team winning the game. If Team A is favored to win with money line $-d$ (where $d>0$), then the corresponding prediction for the probability of Team A winning is $\frac{d}{d + 100}$. If Team B is the underdog with money line $d$ (where again $d>0$), then the corresponding prediction of Team B winning is $\frac{100}{d + 100}$. One way to think about this is if the money lines for Team A and Team B are $-100$ and $+100$, then their probabilities of winning are $\frac{1}{2}$ and $\frac{1}{2}$; both teams are equally likely to win. Another simple example is if the money line for Team B is $+300$, then the probability of Team B winning is $\frac{1}{4}$. In the Golden State versus Utah example, the probability of Golden State winning is $\frac{120}{220} = \frac{6}{11} \approx .55$, and the probability of Utah winning is $\frac{100}{210} = \frac{10}{21} \approx .48$. The observant reader will notice that these probabilities do not add up to $1$: $\frac{6}{11} + \frac{10}{21} \approx 1.03$. The difference between the sum of the prediction probabilities and $1$ is called the margin of the money line odds.
 
-The margin is one way odds makers make money from betters, and there is always a margin. If there were to be no margin for a game, then the money lines for each of the teams would be the same (with the favored team getting a minus sign and the underdog getting a plus sign). This is seen as follows: let Team A and Team B's money lines be $-d_1$, $d_2$, respectively where $d_1, d_2 > 0$. Let $P$ be the probability of Team A winning; then $1-P$ is the probability of Team B winning. The equations relating the money lines and probabilities are
+The margin is one way odds makers make money from betters. There is always a margin. If there were to be no margin for a game, then the money lines for each of the teams would be the same (with the favored team getting a minus sign and the underdog getting a plus sign). This is seen as follows: let Team A and Team B's money lines be $-d_1$, $d_2$, respectively where $d_1, d_2 > 0$. Let $P$ be the probability of Team A winning; then $1-P$ is the probability of Team B winning. The equations relating the money lines and probabilities are
 
 $$\frac{d_1}{d_1 + 100} = P, \frac{100}{d_2 + 100} = 1 - P.$$
 
 Solving these equations for $d_1$ and $d_2$, gives
 
-$$d_1 = d_2 = \frac{100P}{1-P}.$$
+$$d_1 = d_2 = \frac{100P}{1-P},$$
 
-So we see that if there is no margin, then the money lines would both be the same.
+so  if there is no margin, then the two money lines are the same.
 
 Let's see how the odds maker makes money from the margin in the Golden State versus Utah example. For simplicity, say that Golden State has a betting probability for winning the game of $0.55$ (rounding $\frac{6}{11}$), and say Utah has a betting probability for winning the game of $0.48$ (similarly rounding $\frac{10}{21}$). The margin is then $0.03$. Let's assume that the "real" probability of Golden State winning is $0.53$ and the "real" probability of Utah winning is $0.47$. The betting probabilities are always overestimates of the "real" probabilities. The money lines with the "real" probabilities would be Golden State $-112.77$ and Utah $+112.77$ (rounding to $2$ decimals).
 
-Now let's say that $100$ people each bet $\\$100$ on the game, and whom they bet on aligns with the "real" probabilities of the teams winning, so $53$ people bet on Golden State to win and $47$ people bet on Utah to win. Say Golden State wins. Then using the real probabilites, the odds maker or bookie (bookie is a term for the person who takes the bets) has to pay out $53\cdot \\$100\cdot \frac{100}{112.77} = \\$4699.83$ to the people who bet on Golden State to win. This $\\$4699.83$ is the $\\$4700$ dollars bet on Utah to win (with some rounding error). On the other hand, using the probabilities with the margin, if Golden State wins, then the bookie has to pay out $53\cdot\\$ 100\cdot\frac{100}{120} = \\$4416.67$, which is less than the $\\$4700$ dollars bet on Utah. With these inflated probabilities, the bookie takes home $\\$4700 - \\$4416.67 = \\$282.33$. Similarly, if Utah wins and the bookie uses the real probabilities then the bookie takes home no money, while if the bookie uses the probabilities with the margin then the bookie makes a profit. In this example the profit when Utah wins would be $\\$130$.
+Now let's say that $100$ people each bet $\\$100$ on the game, and whom they bet on aligns with the "real" probabilities of the teams winning, so $53$ people bet on Golden State to win and $47$ people bet on Utah to win. Say Golden State wins. Then using the real probabilites, the odds maker or bookie (bookie is a term for the person who takes the bets) has to pay out $53\cdot \\$100\cdot \frac{100}{112.77} = \\$4699.83$ to the people who bet on Golden State to win. This $\\$4699.83$ is the $\\$4700$ dollars bet on Utah to win (with some rounding error). On the other hand, using the probabilities with the margin, if Golden State wins, then the bookie has to pay out $53\cdot\\$ 100\cdot\frac{100}{120} = \\$4416.67$, which is less than the $\\$4700$ dollars bet on Utah. With these inflated probabilities, the bookie takes home $\\$4700 - \\$4416.67 = \\$282.33$. Similarly, if Utah wins and the bookie uses the real probabilities then the bookie takes home no money, while if the bookie uses the probabilities with the margin then the bookie makes a profit. In this example the profit for the bookie if Utah wins is $\\$130$.
 
-How the margin works in making the bookie money has implications on the meaning of the predicted betting probabilities. In order to make the most money off the margin, the odds maker really wants to know the percentage of people betting on each team to win, not necessarily the likelihood each team will win. If the odds maker knows the percentage of people betting on each team to win, then by making the odds so that the probabilities of each team winning are slightly higher than the percentage of people that will bet on each team, the bookie makes money as in the example of the previous paragraph. This does happen with real money lines. The public has a tendency to bet more on more popular teams from larger markets (think the Los Angeles Lakers or Dallas Cowboys), and this is reflected in the money lines. Nonetheless, betting odds are intended to reflect to the better what the odds maker thinks the probabilities of each team winning are.
+The margin has implications on the meaning of the probabilities of each team winning derived from the betting odds. In order to make the most money off the margin, the odds maker really wants to know the percentage of people betting on each team to win, not necessarily the likelihood each team will win. If the odds maker knows the percentage of people betting on each team to win, then by making the odds so that the probabilities of each team winning are slightly higher than the percentage of people that will bet on each team, the bookie makes money as in the example of the previous paragraph. This thought process affects real money lines. The public has a tendency to bet more on more popular teams from larger markets (think the Los Angeles Lakers or Dallas Cowboys), and this is reflected in the money lines. Nonetheless, money lines do reflect the odds maker's predictions for the probabilities of each team winning.
 
 <a name="1"><sup>1</sup></a> If you win a bet then you get the money you bet back plus the amount of winnings for the bet. That is, if you bet $\\$100$ and win $\\$100$, then you get your original $\\$100$ back plus an additional $\\$100$. If you lose a bet, then you do not get the money you bet back.
